plugins {
    id 'java'
    id 'idea'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.10'
    id 'org.beryx.jlink' version '2.24.1'
}

group 'it.oopcourse'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.8.1'
}

sourceCompatibility = '17'
targetCompatibility = '17'

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

javafx {
    version = '17.0.1'
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.swing', 'javafx.base' ]
}

dependencies {
    implementation 'org.jetbrains:annotations:23.0.0'

    // database
    implementation 'com.zaxxer:HikariCP:5.0.1'
    implementation 'mysql:mysql-connector-java:8.0.30'
    implementation 'org.xerial:sqlite-jdbc:3.39.3.0'
    implementation 'com.h2database:h2:2.1.214'
    implementation 'com.microsoft.sqlserver:mssql-jdbc:11.2.1.jre17'

    // rest
    implementation(platform("com.squareup.okhttp3:okhttp-bom:4.10.0"))

    // logging
    implementation 'org.slf4j:slf4j-api:2.0.1'
    implementation 'org.slf4j:slf4j-simple:2.0.1'

    // graphics components
    implementation 'org.fxmisc.richtext:richtextfx:0.11.0'
    implementation 'net.mahdilamb:colormap:0.9.511'

    // testing
    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

test {
    useJUnitPlatform()
}

jlink {
    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip") as RegularFile
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'app'
    }
}

jlinkZip {
    group = 'distribution'
}